CRUD implementation for Crop/SellerAccount/BuyerAccount.

--- a/Source/OurFood/src/main/resources/templates/user/login.html
+++ b/Source/OurFood/src/main/resources/templates/user/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta charset="utf-8" />
-<title>Login | AppLite</title>
+<title>Login | Ourfood</title>
 
 <meta name="description" content="User login page" />
 <meta name="viewport"
@@ -42,10 +42,10 @@
 					<div class="login-container">
 						<div class="center">
 							<h1>
-								<i class="ace-icon fa fa-leaf green hide"></i> <span class="red">AppLite Platform</span>
+								<i class="ace-icon fa fa-leaf green hide"></i> <span class="red">Ourfood Platform</span>
 							</h1>
-							<h4 class="blue" id="id-company-text">&copy; Qnovon
-								Technologies</h4>
+							<h4 class="blue" id="id-company-text">&copy; Ourfood
+								Pvt. Ltd</h4>
 						</div>
 
 						<div class="space-6"></div>
