--- a/Source/OurFood/src/main/resources/templates/buyacc/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/buyacc/edit-form.html
@@ -3,20 +3,19 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Crop</title>
+<title>Buyer Account</title>
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<div class="page-header header-background">
-			<h1>
-				Update Crop				
-			</h1>
+			<h1>Update Buyer Account</h1>
 		</div>
 		<div class="row vertical-align">
 			<div class="col-md-10">
-				<form id="editForm" th:action="@{/crop/edit/{id}(id=${crop.id})}" action="#"
+				<form id="editForm"
+					th:action="@{/buyacc/edit/{id}(id=${account.id})}" action="#"
 					method="post" role="form" class="form-horizontal"
-					th:object="${crop}" th:attr="data-item-id=${crop.id}">
+					th:object="${account}" th:attr="data-item-id=${account.id}">
 					<div class="row" th:if="${#fields.hasErrors('*')}">
 						<div class="col-md-12">
 							<div class="note note-danger">
@@ -32,33 +31,30 @@
 								<label for="first-name" class="control-label col-md-2">Name</label>
 								<div class="col-md-4">
 									<input type="text" th:field="*{name}" placeholder="Name"
-										class="form-control input-sm mandatory" id="name" required="required"
-										pattern="/^[\w'\s]+$/" />
+										class="form-control input-sm mandatory" id="name"
+										required="required" pattern="/^[\w'\s]+$/" />
 								</div>
-								<label for="cropCategory" class="control-label col-md-2">Category</label>
+								<label for="first-name" class="control-label col-md-2">Pin
+									Code</label>
 								<div class="col-md-4">
-									<select class="form-control mandatory" id="cropCategory"
-										name="cropCategory">
-										<option
-											th:each="type : ${T(ourfood.domain.enums.CropCategory).values()}"
-											th:text="#{cropCategory. + ${type}}" th:value="${type}"
-											th:selected="${type == crop.cropCategory}"></option>
-									</select>
+									<input type="number" th:field="*{pinCode}"
+										placeholder="Pin Code" class="form-control input-sm mandatory"
+										id="pin-code" required="required" />
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="description" class="control-label col-md-2">Description</label>
 								<div class="col-md-4">
-									<textarea th:field="*{description}"
-										placeholder="Description" class="form-control mandatory" required="required"
+									<textarea th:field="*{description}" placeholder="Description"
+										class="form-control mandatory" required="required"
 										id="description"></textarea>
 								</div>
 							</div>
 							<div class="form-group">
-							<label class="control-label col-md-2"></label>
+								<label class="control-label col-md-2"></label>
 								<div class="col-md-4">
-									<input type="submit" id="btn-update" class="btn btn-sm btn-success"
-										value="Save" />
+									<input type="submit" id="btn-update"
+										class="btn btn-sm btn-success" value="Save" />
 								</div>
 							</div>
 						</fieldset>
@@ -67,19 +63,18 @@
 			</div>
 		</div>
 	</div>
-	<script layout:fragment="script" type="text/javascript">		
+	<script layout:fragment="script" type="text/javascript">
+		function updateItem(e) {
 
-		function updateItem(e) {					
-
-			e.preventDefault();					
+			e.preventDefault();
 
 			var itemId = $(this).data("item-id");
-			var url = $(this).attr("action");					
+			var url = $(this).attr("action");
 
 			$.ajax({
 				type : 'POST',
 				url : url,
-				data : new FormData($(this)[0]),						
+				data : new FormData($(this)[0]),
 				cache : false,
 				processData : false,
 				contentType : false,
@@ -87,19 +82,18 @@
 					$("#btn-update").prop('disabled', true);
 				},
 				success : function(response) {
-					$("#btn-update").prop('disabled', false);							
+					$("#btn-update").prop('disabled', false);
 					showMessage('Group updated successfully.', '', 'success');
 
 				},
-				error : function(XMLHttpRequest, textStatus,
-						errorThrown) {
-					
+				error : function(XMLHttpRequest, textStatus, errorThrown) {
+
 					showMessage(XMLHttpRequest.responseText, '', 'error');
 					$("#btn-update").prop('disabled', false);
 				}
 			});
 		}
-	
+
 		$(document).ready(function() {
 			$('#editForm').parsley();
 			$("#editForm").on("submit", updateItem);
