--- a/Source/OurFood/src/main/resources/templates/buyacc/form.html
+++ b/Source/OurFood/src/main/resources/templates/buyacc/form.html
@@ -3,20 +3,20 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Crop</title>
+<title>Buyer Account</title>
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 	<div class="page-header header-background">
 			<h1>
-				Add Crop				
+				Add Buyer Account				
 			</h1>
 		</div>
 		<div class="row vertical-align">
 			<div class="col-md-10">
-				<form id="createCrop" th:action="@{/crop/create}" action="#"
+				<form id="createAccount" th:action="@{/buyacc/create}" action="#"
 					method="post" role="form" class="form-horizontal"
-					th:object="${crop}">
+					th:object="${account}">
 					<div class="row" th:if="${#fields.hasErrors('*')}">
 						<div class="col-md-12">
 							<div class="note note-danger">
@@ -32,18 +32,15 @@
 								<label for="first-name" class="control-label col-md-2">Name</label>
 								<div class="col-md-4">
 									<input type="text" th:field="*{name}" placeholder="Name"
-										class="form-control input-sm mandatory" id="name" required="required"
-										pattern="/^[\w'\s]+$/" />
+										class="form-control input-sm mandatory" id="name"
+										required="required" pattern="/^[\w'\s]+$/" />
 								</div>
-								<label for="cropCategory" class="control-label col-md-2">Category</label>
+								<label for="first-name" class="control-label col-md-2">Pin
+									Code</label>
 								<div class="col-md-4">
-									<select class="form-control mandatory" id="cropCategory"
-										name="cropCategory">
-										<option
-											th:each="type : ${T(ourfood.domain.enums.CropCategory).values()}"
-											th:text="#{cropCategory. + ${type}}" th:value="${type}"
-											th:selected="${type == crop.cropCategory}"></option>
-									</select>
+									<input type="number" th:field="*{pinCode}"
+										placeholder="Pin Code" class="form-control input-sm mandatory"
+										id="pin-code" required="required" />
 								</div>
 							</div>
 							<div class="form-group">
@@ -69,7 +66,7 @@
 	</div>
 	<script layout:fragment="script" type="text/javascript">
 		$(document).ready(function() {
-			$('#createCrop').parsley();
+			$('#createAccount').parsley();
 		});
 	</script>
 </body>
