--- a/Source/OurFood/src/main/resources/templates/layout.html
+++ b/Source/OurFood/src/main/resources/templates/layout.html
@@ -18,17 +18,8 @@
 <link rel="stylesheet" static:href="@{/css/scanon-ext.css}" />
 <link rel="stylesheet"
 	static:href="@{/css/tinymce/skins/lightgray/skin.min.css}" />
-<!-- <link rel="stylesheet" static:href="@{/css/fonts.googleapis.com.css}" /> -->
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300'
 	rel='stylesheet' type='text/css' />
-<!--[if lte IE 9]>
-        <link rel="stylesheet" static:href="@{/css/ace-part2.min.css" />
-        <link rel="stylesheet" static:href="@{/css/ace-ie.min.css" />
-        <![endif]-->
-<!--[if lte IE 8]>
-        <script static:src="@{/js/html5shiv.min.js}"></script>
-        <script static:src="@{/js/respond.min.js}"></script>
-        <![endif]-->
 </head>
 <body class="no-skin">
 	<div id="navbar"
@@ -73,42 +64,23 @@
 														th:text="${notification.message}"></th:block>
 												</span>
 											</div>
-									</a></li>
-									<li th:unless="${notifications.getTotalElements() > 0}">
-										<div class="clearfix">
-											<span class="pull-left"> <i
-												class="btn btn-xs no-hover btn-pink fa fa-comment"></i> No
-												new Notifications
-											</span>
-										</div>
-									</li>
+									</a></li>									
 								</ul>
 							</li>
 						</ul></li>
 					<li class="light-blue"><a data-toggle="dropdown" href="#"
-						class="dropdown-toggle"> <!-- <img class="nav-user-photo"
-							src="assets/avatars/user.jpg"
-							static:src="@{/images/avatars/user.jpg}" alt="User's Photo" />  -->
+						class="dropdown-toggle"><img class="nav-user-photo"
+							src="assets/avatars/power-admin.jpg"
+							static:src="@{/images/avatars/power-admin.jpg}" alt="User" />
 							<span class="user-info"> <small>Welcome,</small> <span
 								sec:authentication="name">User</span>
 						</span> <i class="ace-icon fa fa-caret-down"></i>
 					</a>
 						<ul
 							class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
-						<!--  	<li><a th:href="@{/construction}" href="#"> <i
-									class="ace-icon fa fa-cog"></i> Settings
-							</a></li>
-							<li><a href="#"
-								sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"> <i
-									class="ace-icon fa fa-user"></i> Profile
-							</a></li> -->
 							<li><a th:href="@{/users/change-pwd}" href="#"> <i
 									class="ace-icon fa fa-key"></i> Change Password
 							</a></li>
-						<!--  	<li><a th:href="@{/users/impersonate}" href="#"
-								sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"> <i
-									class="ace-icon fa fa-user-secret"></i> Impersonate
-							</a></li>-->
 							<li class="divider"></li>
 							<li><a href="#" th:href="@{/users/logout}"> <i
 									class="ace-icon fa fa-power-off"></i> Logout
@@ -172,12 +144,20 @@
 				</a> <b class="arrow"></b>
 					<ul class="submenu">
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/organization/create" title="Create Org"> <i
-								class="menu-icon fa fa-caret-right"></i> Create Account
+							href="/sellacc/create" title="Create Org"> <i
+								class="menu-icon fa fa-caret-right"></i> Create Seller Account
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/organization/list" title="View Orgs"> <i
-								class="menu-icon fa fa-caret-right"></i> View Accounts
+							href="/sellacc/list" title="View Orgs"> <i
+								class="menu-icon fa fa-caret-right"></i> View Seller Accounts
+						</a> <b class="arrow"></b></li>
+						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
+							href="/buyacc/create" title="Create Org"> <i
+								class="menu-icon fa fa-caret-right"></i> Create Buyer Account
+						</a> <b class="arrow"></b></li>
+						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
+							href="/buyacc/list" title="View Orgs"> <i
+								class="menu-icon fa fa-caret-right"></i> View Buyer Accounts
 						</a> <b class="arrow"></b></li>
 						<li
 							sec:authorize="hasAnyRole('PERM_PLATFORM_UPDATE', 'PERM_ORG_UPDATE')"><a
@@ -197,20 +177,20 @@
 				</a> <b class="arrow"></b>
 					<ul class="submenu">
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/organization/create" title="Seller Price"> <i
-								class="menu-icon fa fa-caret-right"></i> Seller Price
+							href="/organization/create" title="Price Index (Seller)"> <i
+								class="menu-icon fa fa-caret-right"></i> Price Index (Seller)
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/organization/list" title="Buyer Price"> <i
-								class="menu-icon fa fa-caret-right"></i> Buyer Price
+							href="/organization/list" title="Price Index (Buyer)"> <i
+								class="menu-icon fa fa-caret-right"></i> Price Index (Buyer)
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/organization/list" title="Locations"> <i
-								class="menu-icon fa fa-caret-right"></i> Locations
+							href="/organization/list" title="Processing Centers"> <i
+								class="menu-icon fa fa-caret-right"></i> Processing Centers
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/crop/create" title="Crop"> <i
-								class="menu-icon fa fa-caret-right"></i> Crop
+							href="/crop/list" title="Crops"> <i
+								class="menu-icon fa fa-caret-right"></i> Crops
 						</a> <b class="arrow"></b></li>
 					</ul></li>
 			</ul>
@@ -242,16 +222,8 @@
 			<div class="footer-inner">
 				<div class="footer-content">
 					<span> <span class="blue bolder">Our Food</span>
-						Platform &copy; 2015-2016
-					</span>
-					<!-- &nbsp; &nbsp; <span class="action-buttons"> <a href="#">
-							<i class="ace-icon fa fa-twitter-square light-blue bigger-150"></i>
-					</a> <a href="#"> <i
-							class="ace-icon fa fa-facebook-square text-primary bigger-150"></i>
-					</a> <a href="#"> <i
-							class="ace-icon fa fa-rss-square orange bigger-150"></i>
-					</a>
-					</span> -->
+						Platform &copy; 2016-2017
+					</span>					
 				</div>
 			</div>
 		</div>
