--- a/Source/OurFood/src/main/resources/templates/sellacc/list.html
+++ b/Source/OurFood/src/main/resources/templates/sellacc/list.html
@@ -3,13 +3,13 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Crops</title>
+<title>Seller Accounts</title>
 </head>
 <body th:attr="data-navlink=${navlink}">
 	<div layout:fragment="content" class="container-fluid">
 		<div class="page-header header-background">
 			<h1>
-				Crops
+				Seller Accounts
 				<div role="toolbar" id="as-actions" class="pull-right">
 					<div class="btn-group">
 						<button type="button" class="btn btn-white btn-warning"
@@ -17,12 +17,12 @@
 							<i class="ace-icon fa fa-trash-o bigger-120"></i>Delete
 						</button>
 						<a type="button" class="btn btn-white btn-primary"
-							th:href="@{/crop/create}">Add</a>
+							th:href="@{/sellacc/create}">Add</a>
 					</div>
 				</div>
 			</h1>
 		</div>
-		<div class="row">			
+		<div class="row">
 			<div class="col-md-12 ui-sortable">
 				<table
 					class="table table-bordered table-hover no-margin-bottom no-border-top"
@@ -32,30 +32,30 @@
 							<th></th>
 							<th>Id</th>
 							<th>Name</th>
-							<th>Category</th>
+							<th>PIN Code</th>
 							<th>Description</th>
 						</tr>
 					</thead>
 					<tbody>
-						<th:block th:each="crop : ${crops}">
+						<th:block th:each="account : ${accounts}">
 							<tr>
 								<td class="center"><label class="pos-rel"> <input
-										type="checkbox" th:attr="data-item-id=${crop.id}" class="ace" />
-										<span class="lbl"></span>
+										type="checkbox" th:attr="data-item-id=${account.id}"
+										class="ace" /> <span class="lbl"></span>
 								</label></td>
-								<td><span th:text="${crop.name}">Name</span></td>
-								<td><a th:href="@{/crop/edit/{id}(id=${crop.id})}"
-									th:text="${crop.name}" th:title="${crop.name}">Name</a></td>
-								<td><span th:text="#{'cropCategory.'+${crop.cropCategory}}">Category</span></td>								
-								<td><span th:text="${crop.description}">Description</span></td>
+								<td><span th:text="${account.id}">ID</span></td>
+								<td><a th:href="@{/sellacc/edit/{id}(id=${account.id})}"
+									th:text="${account.name}" th:title="${account.name}">Name</a></td>
+								<td><span th:text="${account.pinCode}">PIN</span></td>
+								<td><span th:text="${account.description}">Description</span></td>
 							</tr>
 						</th:block>
 					</tbody>
-				</table>				
+				</table>
 			</div>
 		</div>
-		<div class="modal fade" id="modal-delete-items" tabindex="-1" role="dialog"
-			aria-labelledby="modalLabel" aria-hidden="true">
+		<div class="modal fade" id="modal-delete-items" tabindex="-1"
+			role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -63,16 +63,18 @@
 							aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
-						<h4 class="modal-title" id="modalLabel">Delete
-							Crops</h4>
+						<h4 class="modal-title" id="modalLabel">Delete Seller
+							Accounts</h4>
 					</div>
-					<form id="form-delete-items" action="/crop/delete" method="post">
+					<form id="form-delete-items" action="@{/sellacc/delete}"
+						method="post">
 						<div class="modal-body">
 							<input type="hidden" name="itemIds[]" value="" /> Do you want to
-							delete the selected crops?<span id="delete-item-name"></span>
+							delete the selected seller accounts?<span id="delete-item-name"></span>
 						</div>
 						<div class="modal-footer">
-							<input type="submit" id="btn-delete-items" class="btn btn-danger" value="Delete"/>
+							<input type="submit" id="btn-delete-items" class="btn btn-danger"
+								value="Delete" />
 							<button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
 						</div>
 					</form>
@@ -85,43 +87,43 @@
 			type="text/javascript"></script>
 		<script static:src="@{/js/datatables/js/dataTables.bootstrap.min.js}"
 			type="text/javascript"></script>
-		<script type="text/javascript">		
-			
-			function deleteItems() {				
-					
+		<script type="text/javascript">
+			function deleteItems() {
+
 				var boxes = $("#item-list input[type=checkbox]:checked");
 				itemIds = [];
-				
+
 				$.each(boxes, function(index, box) {
 					itemIds.push($(box).data("item-id"))
 				})
-				
-				if (itemIds.length > 0){
-					$('#modal-delete-items').modal('show'); 
+
+				if (itemIds.length > 0) {
+					$('#modal-delete-items').modal('show');
 					var modal = $(this);
-					$('#modal-delete-items').find('.modal-body input[name="itemIds[]"]').val(itemIds);
+					$('#modal-delete-items').find(
+							'.modal-body input[name="itemIds[]"]').val(itemIds);
+				} else {
+					showMessage('Please select an account to delete', '',
+							'warning');
 				}
-				else {
-					showMessage('Please select a crop to delete','','warning');
-				}				
 			}
-			
-			function disableDeleteBtn(){
+
+			function disableDeleteBtn() {
 				$("#btn-delete-items").prop('disabled', true);
 			}
 
 			$(document).ready(function() {
-				
-				$('#form-delete-items').parsley();		
-				$("#btn-delete").on("click",deleteItems);
-				$("#form-delete-items").on("submit", disableDeleteBtn);				
-				
+
+				$('#form-delete-items').parsley();
+				$("#btn-delete").on("click", deleteItems);
+				$("#form-delete-items").on("submit", disableDeleteBtn);
+
 				$('#item-list').DataTable({
 					"iDisplayLength" : 25,
-					language: {
-				        searchPlaceholder: "Search..."
-				    }
-				});			
+					language : {
+						searchPlaceholder : "Search..."
+					}
+				});
 			});
 		</script>
 	</th:block>
