--- a/Source/OurFood/src/main/resources/templates/procen/form.html
+++ b/Source/OurFood/src/main/resources/templates/procen/form.html
@@ -3,20 +3,18 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Seller Account</title>
+<title>Processing Center</title>
 </head>
 <body>
 	<div layout:fragment="content" class="container">
-	<div class="page-header header-background">
-			<h1>
-				Add Seller Account				
-			</h1>
+		<div class="page-header header-background">
+			<h1>Add Processing Center</h1>
 		</div>
 		<div class="row vertical-align">
 			<div class="col-md-10">
-				<form id="createAccount" th:action="@{/sellacc/create}" action="#"
+				<form id="createProCen" th:action="@{/procen/create}" action="#"
 					method="post" role="form" class="form-horizontal"
-					th:object="${account}">
+					th:object="${proCen}">
 					<div class="row" th:if="${#fields.hasErrors('*')}">
 						<div class="col-md-12">
 							<div class="note note-danger">
@@ -44,15 +42,33 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="description" class="control-label col-md-2">Description</label>
+								<label for="first-name" class="control-label col-md-2">Processing
+									Capacity</label>
 								<div class="col-md-4">
-									<textarea th:field="*{description}"
-										placeholder="Description" class="form-control mandatory"
-										id="description" required="required" ></textarea>
+									<input type="number" th:field="*{processingCapacity}"
+										placeholder="Processing Capacity"
+										class="form-control input-sm mandatory"
+										id="processingCapacity" required="required" />
+								</div>
+								<label for="first-name" class="control-label col-md-2">Storage
+									Capacity Code</label>
+								<div class="col-md-4">
+									<input type="number" th:field="*{storageCapacity}"
+										placeholder="Storage Capacity"
+										class="form-control input-sm mandatory" id="storageCapacity"
+										required="required" />
 								</div>
 							</div>
 							<div class="form-group">
-							<label class="control-label col-md-2"></label>
+								<label for="description" class="control-label col-md-2">Description</label>
+								<div class="col-md-4">
+									<textarea th:field="*{description}" placeholder="Description"
+										class="form-control mandatory" id="description"
+										required="required"></textarea>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="control-label col-md-2"></label>
 								<div class="col-md-4">
 									<input type="submit" class="btn btn-sm btn-success"
 										value="Save" />
@@ -66,7 +82,7 @@
 	</div>
 	<script layout:fragment="script" type="text/javascript">
 		$(document).ready(function() {
-			$('#createAccount').parsley();
+			$('#createProCen').parsley();
 		});
 	</script>
 </body>
