--- a/Source/OurFood/src/main/resources/templates/sellacc/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/sellacc/edit-form.html
@@ -40,7 +40,7 @@
 								<div class="col-md-4">
 									<input type="number" th:field="*{pinCode}"
 										placeholder="Pin Code" class="form-control input-sm mandatory"
-										id="pin-code" required="required" />
+										id="pinCode" required="required" />
 								</div>
 							</div>
 							<div class="form-group">
