--- a/Source/OurFood/src/main/resources/templates/layout.html
+++ b/Source/OurFood/src/main/resources/templates/layout.html
@@ -110,11 +110,11 @@
 						class="arrow fa fa-angle-down"></b>
 				</a> <b class="arrow"></b>
 					<ul class="submenu">
-						<li><a href="/as/templates" title="Create Order"> <i
+						<li><a href="/sellerorder/create" title="Create Order"> <i
 								class="menu-icon fa fa-caret-right"></i> Create Order
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/as/list" title="View Orders"> <i
+							href="/sellerorder/list" title="View Orders"> <i
 								class="menu-icon fa fa-caret-right"></i> View Orders
 						</a> <b class="arrow"></b></li>
 					</ul></li>
@@ -124,15 +124,15 @@
 						class="arrow fa fa-angle-down"></b>
 				</a> <b class="arrow"></b>
 					<ul class="submenu">
-						<li><a href="/as/templates" title="Create Order"> <i
+						<li><a href="/buyerorder/create" title="Create Order"> <i
 								class="menu-icon fa fa-caret-right"></i> Create Order
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/as/list" title="View Orders"> <i
+							href="/buyerorder/list" title="View Orders"> <i
 								class="menu-icon fa fa-caret-right"></i> View Orders
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/as/list" title="Price Calculator"> <i
+							href="#" title="Price Calculator"> <i
 								class="menu-icon fa fa-caret-right"></i> Price Calculator
 						</a> <b class="arrow"></b></li>
 					</ul></li>
