--- a/Source/OurFood/src/main/resources/templates/layout.html
+++ b/Source/OurFood/src/main/resources/templates/layout.html
@@ -143,11 +143,11 @@
 				</a> <b class="arrow"></b>
 					<ul class="submenu">
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/sellacc/create" title="Create Org"> <i
+							href="/selleraccount/create" title="Create Org"> <i
 								class="menu-icon fa fa-caret-right"></i> Create Seller Account
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/sellacc/list" title="View Orgs"> <i
+							href="/selleraccount/list" title="View Orgs"> <i
 								class="menu-icon fa fa-caret-right"></i> View Seller Accounts
 						</a> <b class="arrow"></b></li>
 					</ul></li>
@@ -159,11 +159,11 @@
 				</a> <b class="arrow"></b>
 					<ul class="submenu">
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/buyacc/create" title="Create Org"> <i
+							href="/buyeraccount/create" title="Create Org"> <i
 								class="menu-icon fa fa-caret-right"></i> Create Buyer Account
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/buyacc/list" title="View Orgs"> <i
+							href="/buyeraccount/list" title="View Orgs"> <i
 								class="menu-icon fa fa-caret-right"></i> View Buyer Accounts
 						</a> <b class="arrow"></b></li>
 					</ul></li>
@@ -187,8 +187,8 @@
 								class="menu-icon fa fa-caret-right"></i> Processing Centers
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
-							href="/crop/list" title="Crops"> <i
-								class="menu-icon fa fa-caret-right"></i> Crops
+							href="/produce/list" title="Produces"> <i
+								class="menu-icon fa fa-caret-right"></i> Produces
 						</a> <b class="arrow"></b></li>						
 					</ul></li>
 				<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a href="#"
