--- a/Source/OurFood/src/main/resources/templates/buyeraccount/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/buyeraccount/edit-form.html
@@ -7,16 +7,15 @@
 </head>
 <body>
 	<div layout:fragment="content" class="container">
-	<div class="page-header header-background">
-			<h1>
-				Add Buyer Account				
-			</h1>
+		<div class="page-header header-background">
+			<h1>Update Buyer Account</h1>
 		</div>
 		<div class="row vertical-align">
 			<div class="col-md-10">
-				<form id="createAccount" th:action="@{/buyacc/create}" action="#"
+				<form id="editForm"
+					th:action="@{/buyeraccount/edit/{id}(id=${account.id})}" action="#"
 					method="post" role="form" class="form-horizontal"
-					th:object="${account}">
+					th:object="${account}" th:attr="data-item-id=${account.id}">
 					<div class="row" th:if="${#fields.hasErrors('*')}">
 						<div class="col-md-12">
 							<div class="note note-danger">
@@ -46,16 +45,16 @@
 							<div class="form-group">
 								<label for="description" class="control-label col-md-2">Description</label>
 								<div class="col-md-4">
-									<textarea th:field="*{description}"
-										placeholder="Description" class="form-control mandatory"
-										id="description" required="required" ></textarea>
+									<textarea th:field="*{description}" placeholder="Description"
+										class="form-control mandatory" required="required"
+										id="description"></textarea>
 								</div>
 							</div>
 							<div class="form-group">
-							<label class="control-label col-md-2"></label>
+								<label class="control-label col-md-2"></label>
 								<div class="col-md-4">
-									<input type="submit" class="btn btn-sm btn-success"
-										value="Save" />
+									<input type="submit" id="btn-update"
+										class="btn btn-sm btn-success" value="Save" />
 								</div>
 							</div>
 						</fieldset>
@@ -65,8 +64,39 @@
 		</div>
 	</div>
 	<script layout:fragment="script" type="text/javascript">
+		function updateItem(e) {
+
+			e.preventDefault();
+
+			var itemId = $(this).data("item-id");
+			var url = $(this).attr("action");
+
+			$.ajax({
+				type : 'POST',
+				url : url,
+				data : new FormData($(this)[0]),
+				cache : false,
+				processData : false,
+				contentType : false,
+				beforeSend : function() {
+					$("#btn-update").prop('disabled', true);
+				},
+				success : function(response) {
+					$("#btn-update").prop('disabled', false);
+					showMessage('Group updated successfully.', '', 'success');
+
+				},
+				error : function(XMLHttpRequest, textStatus, errorThrown) {
+
+					showMessage(XMLHttpRequest.responseText, '', 'error');
+					$("#btn-update").prop('disabled', false);
+				}
+			});
+		}
+
 		$(document).ready(function() {
-			$('#createAccount').parsley();
+			$('#editForm').parsley();
+			$("#editForm").on("submit", updateItem);
 		});
 	</script>
 </body>
