--- a/Source/OurFood/src/main/resources/templates/produce/form.html
+++ b/Source/OurFood/src/main/resources/templates/produce/form.html
@@ -3,20 +3,20 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Seller Account</title>
+<title>Produce</title>
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 	<div class="page-header header-background">
 			<h1>
-				Add Seller Account				
+				Add Produce				
 			</h1>
 		</div>
 		<div class="row vertical-align">
 			<div class="col-md-10">
-				<form id="createAccount" th:action="@{/sellacc/create}" action="#"
+				<form id="createProduce" th:action="@{/produce/create}" action="#"
 					method="post" role="form" class="form-horizontal"
-					th:object="${account}">
+					th:object="${produce}">
 					<div class="row" th:if="${#fields.hasErrors('*')}">
 						<div class="col-md-12">
 							<div class="note note-danger">
@@ -32,15 +32,18 @@
 								<label for="first-name" class="control-label col-md-2">Name</label>
 								<div class="col-md-4">
 									<input type="text" th:field="*{name}" placeholder="Name"
-										class="form-control input-sm mandatory" id="name"
-										required="required" pattern="/^[\w'\s]+$/" />
+										class="form-control input-sm mandatory" id="name" required="required"
+										pattern="/^[\w'\s]+$/" />
 								</div>
-								<label for="first-name" class="control-label col-md-2">Pin
-									Code</label>
+								<label for="produceCategory" class="control-label col-md-2">Category</label>
 								<div class="col-md-4">
-									<input type="number" th:field="*{pinCode}"
-										placeholder="Pin Code" class="form-control input-sm mandatory"
-										id="pinCode" required="required" />
+									<select class="form-control mandatory" id="produceCategory"
+										name="produceCategory">
+										<option
+											th:each="type : ${T(ourfood.domain.enums.ProduceCategory).values()}"
+											th:text="#{produceCategory. + ${type}}" th:value="${type}"
+											th:selected="${type == produce.produceCategory}"></option>
+									</select>
 								</div>
 							</div>
 							<div class="form-group">
@@ -66,7 +69,7 @@
 	</div>
 	<script layout:fragment="script" type="text/javascript">
 		$(document).ready(function() {
-			$('#createAccount').parsley();
+			$('#createProduce').parsley();
 		});
 	</script>
 </body>
