--- a/Source/OurFood/src/main/resources/templates/selleraccount/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/selleraccount/edit-form.html
@@ -3,17 +3,18 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Buyer Account</title>
+<title>Seller Account</title>
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<div class="page-header header-background">
-			<h1>Update Buyer Account</h1>
+			<h1>
+				Update Seller Account
+			</h1>
 		</div>
 		<div class="row vertical-align">
 			<div class="col-md-10">
-				<form id="editForm"
-					th:action="@{/buyacc/edit/{id}(id=${account.id})}" action="#"
+				<form id="editForm" th:action="@{/selleraccount/edit/{id}(id=${account.id})}" action="#"
 					method="post" role="form" class="form-horizontal"
 					th:object="${account}" th:attr="data-item-id=${account.id}">
 					<div class="row" th:if="${#fields.hasErrors('*')}">
@@ -31,8 +32,8 @@
 								<label for="first-name" class="control-label col-md-2">Name</label>
 								<div class="col-md-4">
 									<input type="text" th:field="*{name}" placeholder="Name"
-										class="form-control input-sm mandatory" id="name"
-										required="required" pattern="/^[\w'\s]+$/" />
+										class="form-control input-sm mandatory" id="name" required="required"
+										pattern="/^[\w'\s]+$/" />
 								</div>
 								<label for="first-name" class="control-label col-md-2">Pin
 									Code</label>
@@ -45,16 +46,16 @@
 							<div class="form-group">
 								<label for="description" class="control-label col-md-2">Description</label>
 								<div class="col-md-4">
-									<textarea th:field="*{description}" placeholder="Description"
-										class="form-control mandatory" required="required"
+									<textarea th:field="*{description}"
+										placeholder="Description" class="form-control mandatory" required="required"
 										id="description"></textarea>
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="control-label col-md-2"></label>
+							<label class="control-label col-md-2"></label>
 								<div class="col-md-4">
-									<input type="submit" id="btn-update"
-										class="btn btn-sm btn-success" value="Save" />
+									<input type="submit" id="btn-update" class="btn btn-sm btn-success"
+										value="Save" />
 								</div>
 							</div>
 						</fieldset>
@@ -63,18 +64,19 @@
 			</div>
 		</div>
 	</div>
-	<script layout:fragment="script" type="text/javascript">
-		function updateItem(e) {
+	<script layout:fragment="script" type="text/javascript">		
 
-			e.preventDefault();
+		function updateItem(e) {					
+
+			e.preventDefault();					
 
 			var itemId = $(this).data("item-id");
-			var url = $(this).attr("action");
+			var url = $(this).attr("action");					
 
 			$.ajax({
 				type : 'POST',
 				url : url,
-				data : new FormData($(this)[0]),
+				data : new FormData($(this)[0]),						
 				cache : false,
 				processData : false,
 				contentType : false,
@@ -82,18 +84,19 @@
 					$("#btn-update").prop('disabled', true);
 				},
 				success : function(response) {
-					$("#btn-update").prop('disabled', false);
+					$("#btn-update").prop('disabled', false);							
 					showMessage('Group updated successfully.', '', 'success');
 
 				},
-				error : function(XMLHttpRequest, textStatus, errorThrown) {
-
+				error : function(XMLHttpRequest, textStatus,
+						errorThrown) {
+					
 					showMessage(XMLHttpRequest.responseText, '', 'error');
 					$("#btn-update").prop('disabled', false);
 				}
 			});
 		}
-
+	
 		$(document).ready(function() {
 			$('#editForm').parsley();
 			$("#editForm").on("submit", updateItem);
