--- a/Source/OurFood/src/main/resources/templates/sellerorder/form.html
+++ b/Source/OurFood/src/main/resources/templates/sellerorder/form.html
@@ -12,8 +12,8 @@
 		</div>
 		<div class="row vertical-align">
 			<div class="col-md-10">
-				<form id="createOrder" th:action="@{/sellerorder/create}"
-					action="#" method="post" role="form" class="form-horizontal"
+				<form id="createOrder" th:action="@{/sellerorder/create}" action="#"
+					method="post" role="form" class="form-horizontal"
 					th:object="${order}">
 					<div class="row" th:if="${#fields.hasErrors('*')}">
 						<div class="col-md-12">
@@ -26,6 +26,7 @@
 					</div>
 					<div class="row">
 						<fieldset>
+							<h4>Order Details</h4>
 							<div class="form-group">
 								<label for="first-name" class="control-label col-md-2">Name</label>
 								<div class="col-md-4">
@@ -33,10 +34,21 @@
 										class="form-control input-sm mandatory" id="name"
 										required="required" pattern="/^[\w'\s]+$/" />
 								</div>
-								<label for="first-name" class="control-label col-md-2">Pin
-									Code</label>
+							</div>
+							<div class="form-group">
+								<label for="account" class="control-label col-md-2">Account</label>
 								<div class="col-md-4">
-									<input type="number" th:field="*{pinCode}"
+									<select class="form-control mandatory" id="organization"
+										required="required" th:field="*{account}">
+										<option value="" hidden="">Select Seller Account</option>
+										<option th:each="account:${accounts}" th:value="${account.id}"
+											th:text="${account.name}">Seller Account</option>
+									</select>
+								</div>
+								<label for="first-name" class="control-label col-md-2">Location
+									(PIN)</label>
+								<div class="col-md-4">
+									<input type="text" th:field="*{pinCode}"
 										placeholder="Pin Code" class="form-control input-sm mandatory"
 										id="pinCode" required="required" />
 								</div>
@@ -45,15 +57,36 @@
 								<label for="description" class="control-label col-md-2">Description</label>
 								<div class="col-md-4">
 									<textarea th:field="*{description}" placeholder="Description"
-										class="form-control mandatory" id="description"
-										required="required"></textarea>
+										class="form-control mandatory" required="required"
+										id="description"></textarea>
+								</div>
+							</div>
+							<hr />
+							<h4>Order Item Details</h4>
+							<div class="form-group">
+								<label for="orderItem.Produce" class="control-label col-md-2">Produce</label>
+								<div class="col-md-4">
+								<select class="form-control mandatory" id="orderItem.produce"
+										required="required" th:field="*{orderItems[0].produce}">
+										<option value="" hidden="">Select Produce</option>
+										<option th:each="produce: ${produces}" th:value="${produce.id}"
+											th:text="${produce.name}">Produce</option>
+									</select>								
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="orderItem.Quantity" class="control-label col-md-2">Quantity</label>
+								<div class="col-md-4">
+									<input type="text" th:field="*{orderItems[0].quantity}"
+										placeholder="Quantity" class="form-control mandatory"
+										id="order.orderItems[0].quantity" required="required" />
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="control-label col-md-2"></label>
 								<div class="col-md-4">
-									<input type="submit" class="btn btn-sm btn-success"
-										value="Save" />
+									<input type="submit" id="btn-save"
+										class="btn btn-sm btn-success" value="Save" />
 								</div>
 							</div>
 						</fieldset>
