Static dashboard updated.

--- a/Source/OurFood/src/main/resources/templates/sellerorder/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/sellerorder/edit-form.html
@@ -111,7 +111,7 @@
 										</div>
 									</div>
 									<div class="form-group">
-										<label for="orderItem.Quantity" class="control-label col-md-4">Quantity</label>
+										<label for="orderItem.Quantity" class="control-label col-md-4">Quantity (Kg)</label>
 										<div class="col-md-8">
 											<input type="text" th:field="*{orderItems[0].quantity}"
 												placeholder="Quantity" class="form-control mandatory"
