--- a/Source/OurFood/src/main/resources/templates/sellerorder/form.html
+++ b/Source/OurFood/src/main/resources/templates/sellerorder/form.html
@@ -45,10 +45,10 @@
 											th:text="${account.name}">Seller Account</option>
 									</select>
 								</div>
-								<label for="first-name" class="control-label col-md-2">Location
+								<label for="pin-code" class="control-label col-md-2">Location
 									(PIN)</label>
 								<div class="col-md-4">
-									<input type="text" th:field="*{pinCode}"
+									<input type="number" th:field="*{pinCode}"
 										placeholder="Pin Code" class="form-control input-sm mandatory"
 										id="pinCode" required="required" />
 								</div>
