--- a/Source/OurFood/src/main/resources/templates/sellerorder/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/sellerorder/edit-form.html
@@ -54,7 +54,7 @@
 								<label for="first-name" class="control-label col-md-2">Location
 									(PIN)</label>
 								<div class="col-md-4">
-									<input type="text" th:field="*{pinCode}" placeholder="Pin Code"
+									<input type="number" th:field="*{pinCode}" placeholder="Pin Code"
 										class="form-control input-sm mandatory" id="pinCode"
 										required="required" />
 								</div>
