tried felicitating creation of buyerOrderItem at the time of creation of buyerOrder while everything seems working fine on UI(i.e. no errors displayed) but content is not getting updated in mysql

--- a/Source/OurFood/src/main/resources/templates/buyerorder/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/buyerorder/edit-form.html
@@ -55,7 +55,7 @@
 											required="required" th:field="*{account}">
 										<option th:value="${order.account.id}" th:text="${order.account.name}">Current Buyer Account</option>
 										<option th:each="account:${accounts}" th:value="${account.id}"
-												th:text="${account.name}">Buyer Account</option>
+												th:text="${account.name}" th:selected="${account == order.account}">Buyer Account</option>
 									</select>
 								</div>
 							</div>
