--- a/Source/OurFood/src/main/resources/templates/buyerorder/form.html
+++ b/Source/OurFood/src/main/resources/templates/buyerorder/form.html
@@ -53,7 +53,6 @@
 								<div class="col-md-4">
 									<select class="form-control mandatory" id="organization"
 											required="required" th:field="*{account}">
-										<option value="" hidden="">Select Buyer Account</option>
 										<option th:each="account:${accounts}" th:value="${account.id}"
 												th:text="${account.name}">Buyer Account</option>
 									</select>
@@ -61,6 +60,24 @@
 							</div>
 							<hr/>
 							<h4>Order Item Details</h4>
+							<div class="form-group">
+								<label for="produceGrade" class="control-label col-md-2">Produce Grade</label>
+								<div class="cil-md-4">
+									<select class="form-control-mandatory" id="produceGrade" name="produceGrade">
+										<option
+											th:each="type : ${T(ourfood.domain.enums.ProduceGrade).values()}"
+											th:text="${type}" th:value="${type}">Produce Grade</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="orderItem.Quantity" class="control-label col-md-2">Quantity</label>
+								<div class="col-md-4">
+									<input type="text" th:field="*{orderItems[0].quantity}"
+										   placeholder="Quantity" class="form-control mandatory"
+										   id="order.orderItems[0].quantity" required="required" />
+								</div>
+							</div>
 							<div class="form-group">
 								<label class="control-label col-md-2"></label>
 								<div class="col-md-4">
