removed UI part(form) of buyerOrderItem details for now, thymeleaf configuration yet to be done.

--- a/Source/OurFood/src/main/resources/templates/buyeraccount/list.html
+++ b/Source/OurFood/src/main/resources/templates/buyeraccount/list.html
@@ -13,8 +13,7 @@
 				<div role="toolbar" id="as-actions" class="pull-right">
 					<div class="btn-group">
 						<button type="button" class="btn btn-white btn-warning"
-							id="btn-delete">
-							<i class="ace-icon fa fa-trash-o bigger-120"></i>Delete
+							id="btn-delete"><i class="ace-icon fa fa-trash-o bigger-120"></i>Delete
 						</button>
 						<a type="button" class="btn btn-white btn-primary"
 							th:href="@{/buyeraccount/create}">Add</a>
