Accomodating buyerOrderItem creation with buyerOrder try 2

--- a/Source/OurFood/src/main/resources/templates/buyerorder/list.html
+++ b/Source/OurFood/src/main/resources/templates/buyerorder/list.html
@@ -66,7 +66,7 @@
 						<h4 class="modal-title" id="modalLabel">Delete Buyer
 							Accounts</h4>
 					</div>
-					<form id="form-delete-items" action="@{/buyerorder/delete}"
+					<form id="form-delete-items" th:action="@{/buyerorder/delete}"
 						method="post">
 						<div class="modal-body">
 							<input type="hidden" name="itemIds[]" value="" /> Do you want to
